--- a/19_onclick-bombilla_04.html
+++ b/19_onclick-bombilla_04.html
@@ -91,12 +91,12 @@
         });
 
 
-        function crearCopias() {
+        function crearCopias(bombillaColor, grosor,ancho) {
             let numeroCopias =document.getElementById("copias").value;
             console.log(' num 💡' + numeroCopias);
             copiasBom = '';
-            for (let i=1; i<numeroCopias; i++) {
-                copiasBom += `<svg id="mySVG" width="100px"  viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
+            for (let i=1; i<=numeroCopias; i++) {
+                copiasBom += `<svg id="mySVG${i}" width="100px"  viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
                 <!-- Contenido de tu SVG con propiedades fill -->
                 <defs><style>.a{fill:none;stroke:#000000;stroke-linecap:round;stroke-linejoin:round;}</style></defs><path id="myPath" class="a" d="M37.2133,17.7292A13.2133,13.2133,0,1,0,16.5058,28.5958a4.0061,4.0061,0,0,1,1.6648,3.315v4.7315H29.8294V31.907A4.0511,4.0511,0,0,1,31.532,28.57,13.1741,13.1741,0,0,0,37.2133,17.7292Z"/>
                 <line class="a" x1="19.4437" y1="38.9282" x2="28.5563" y2="38.9282"/>
