--- a/15-bombilla_05_intermitente_01.html
+++ b/15-bombilla_05_intermitente_01.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -62,8 +62,7 @@
     <div id="contenedorBombillas"></div>
     <div id="parteTres">
        Introduce Segundos : <input type="number" name="segundos" id="segundos" onBlur="intermitente()" placeholder="Introduce segundos intermitencia">
-       <input type="number" name="numseg" id="numseg">
-     </div>
+      </div>
     <script >
         console.log(`📘Empezamos`);
         var btn = document.getElementById("myButton");
